--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1">
-            <i class="fa fa-user mr-2"></i>
+            <i class="fa fa-user mr-2"> {{member.knownAs}}</i>
         </h6>
         <p class="card-text text-muted">{{member.city}}</p>
     </div>
